--- a/src/http/views/home.hbs
+++ b/src/http/views/home.hbs
@@ -21,4 +21,11 @@
         </div>
     </div>
 </section>
+<div class="mana-color-bar" aria-hidden="true">
+    <span class="mana-w"></span>
+    <span class="mana-u"></span>
+    <span class="mana-b"></span>
+    <span class="mana-r"></span>
+    <span class="mana-g"></span>
+</div>
 {{>setList}}
