--- a/src/http/views/card.hbs
+++ b/src/http/views/card.hbs
@@ -1,11 +1,9 @@
 <link href="//cdn.jsdelivr.net/npm/mana-font@latest/css/mana.min.css" rel="stylesheet" type="text/css" />
-<div class="w-full mx-auto">
+<div class="content-wrapper">
     <section class="card-info flex flex-col md:flex-row section-container">
 
         <section class="md:w-1/3 mb-4 md:mb-6">
-            <div class="aspect-w-2 aspect-h-3">
-                <img class="card-image" src="{{card.imgSrc}}" alt="{{card.name}} - ({{card.setCode}})" />
-            </div>
+            <img class="card-image" src="{{card.imgSrc}}" alt="{{card.name}} - ({{card.setCode}})" />
         </section>
 
         <section class="play-info md:w-2/3 md:pl-6">
@@ -86,6 +84,7 @@
     {{#if otherPrintings.length}}
     <section class="section-container">
         <h3 class="section-title">Other Printings</h3>
+        <div class="table-wrapper">
         <table class="table-container">
             <thead>
                 {{>tableHeadersRow}}
@@ -93,8 +92,8 @@
             <tbody>
                 {{#each otherPrintings as |p|}}
                 <tr class="table-row">
-                    <td class="set-icon pl-2 py-2"><i class="ss ss-{{p.setCode}}"></i></td>
-                    <td data-id="{{p.cardId}}" data-img-src="{{p.imgSrc}}" class="py-2">
+                    <td class="table-cell set-icon"><i class="ss ss-{{p.setCode}}"></i></td>
+                    <td data-id="{{p.cardId}}" data-img-src="{{p.imgSrc}}" class="table-cell">
                         <a href="{{p.url}}" class="card-name-link">{{p.name}}</a>
                         <a href="{{p.url}}" class="card-img-link">
                             <img src="{{p.imgSrc}}" alt="{{p.name}}" class="card-img-preview" />
@@ -102,12 +101,12 @@
                         {{>tags item=p}}
                         <span> (<a class="table-link" href="/sets/{{p.setCode}}">{{toUpperCase p.setCode}}</a>)</span>
                     </td>
-                    <td class="py-2">
+                    <td class="table-cell">
                         {{#if p.hasNormal}}
                         <span class="price-normal">{{p.normalPrice}}</span>
                         {{/if}}
                     </td>
-                    <td class="py-2 pr-2">
+                    <td class="table-cell">
                         {{#if p.hasFoil}}
                         <span class="price-foil">{{p.foilPrice}}</span>
                         <span class="foil-badge xs-hide">Foil</span>
@@ -117,6 +116,7 @@
                 {{/each}}
             </tbody>
         </table>
+        </div>
         {{#if (gt pagination.totalPages 1)}}
         {{>pagination hasItems=otherPrintings.length}}
         {{/if}}
