--- a/src/http/views/partials/setList.hbs
+++ b/src/http/views/partials/setList.hbs
@@ -1,4 +1,4 @@
-<div class="w-full mx-auto">
+<div class="content-wrapper">
     <div class="flex items-center gap-2">
         <div class="flex-1">
             {{>filter}}
@@ -14,25 +14,27 @@
     </div>
     <div id="filter-results">
         {{#if setList.length}}
+        <div class="table-wrapper">
         <table class="min-w-full table-container">
             <thead>{{>tableHeadersRow}}</thead>
             <tbody>
                 {{#each setList}}
                 <tr class="table-row">
-                    <td class="py-2 pl-2">
+                    <td class="table-cell">
                         <i class="ss ss-{{this.keyruneCode}} ss-fw"></i>
                         <a href="{{this.url}}" class="table-link">{{this.name}}</a>
                         {{>tags item=this}}
                     </td>
-                    <td class="py-2">{{this.prices.defaultPrice}}</td>
+                    <td class="table-cell">{{this.prices.defaultPrice}}</td>
                     {{#if ../authenticated}}
-                    <td class="py-2">{{>completionRate}}</td>
+                    <td class="table-cell">{{>completionRate}}</td>
                     {{/if}}
-                    <td class="py-2 pr-2 xs-hide">{{this.releaseDate}}</td>
+                    <td class="table-cell xs-hide">{{this.releaseDate}}</td>
                 </tr>
                 {{/each}}
             </tbody>
         </table>
+        </div>
         {{else}}
         <div class="text-center py-16">
             <i class="fas fa-search text-4xl text-gray-300 dark:text-gray-600 mb-4"></i>
