--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -199,7 +199,7 @@
     </section>
 </div>
 
-<div class="w-full mx-auto">
+<div class="content-wrapper">
     <div class="flex items-center gap-2">
         <div class="flex-1">
             {{>filter}}
@@ -214,35 +214,36 @@
     </div>
     <div id="filter-results">
         {{#if set.cards.length}}
+        <div class="table-wrapper">
         <table class="table-container">
             <thead>{{>tableHeadersRow}}</thead>
             <tbody>
                 {{#each set.cards}}
                 <tr class="table-row">
-                    <td class="py-2 pl-2">
+                    <td class="table-cell">
                         {{>inventoryCtrl card=this}}
                     </td>
-                    <td class="py-2">{{this.number}}</td>
-                    <td data-id="{{this.cardId}}" data-img-src="{{this.imgSrc}}" class="py-2">
+                    <td class="table-cell">{{this.number}}</td>
+                    <td data-id="{{this.cardId}}" data-img-src="{{this.imgSrc}}" class="table-cell">
                         <a href="{{this.url}}" class="card-name-link">{{this.name}}</a>
                         {{>tags item=this}}
                         <a href="{{this.url}}" class="card-img-link">
                             <img src="{{this.imgSrc}}" alt="{{this.name}}" class="card-img-preview" />
                         </a>
                     </td>
-                    <td class="py-2 xs-hide">{{>manaCost card=this}}</td>
-                    <td class="py-2 xs-hide">{{this.rarity}}</td>
-                    <td class="py-2 xs-hide">
+                    <td class="table-cell xs-hide">{{>manaCost card=this}}</td>
+                    <td class="table-cell xs-hide">{{this.rarity}}</td>
+                    <td class="table-cell xs-hide">
                         {{#if this.hasNormal}}
                         <span class="price-normal">{{this.normalPrice}}</span>
                         {{/if}}
                     </td>
-                    <td class="py-2 pr-2 xs-hide">
+                    <td class="table-cell xs-hide">
                         {{#if this.hasFoil}}
                         <span class="price-foil">{{this.foilPrice}}</span>
                         {{/if}}
                     </td>
-                    <td class="py-2 pr-2 xs-show">
+                    <td class="table-cell xs-show">
                         {{#if this.hasFoil}}
                         <span class="price-foil">{{this.foilPrice}}</span>
                         {{/if}}
@@ -254,6 +255,7 @@
                 {{/each}}
             </tbody>
         </table>
+        </div>
         {{else}}
         <div class="text-center py-16">
             <i class="fas fa-search text-4xl text-gray-300 dark:text-gray-600 mb-4"></i>
