--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -1,9 +1,9 @@
 <link href="//cdn.jsdelivr.net/npm/mana-font@latest/css/mana.min.css" rel="stylesheet" type="text/css" />
 <div id="set-header-container" class="relative">
     <section class="text-center bg-teal-50 dark:bg-midnight-900 mb-4 pb-4 rounded-b-lg">
-        <h3 class="page-title flex items-center justify-center space-x-2 pt-4">
-            <i class="ss ss-{{set.keyruneCode}} ss-2x"></i>
-            <span>{{set.name}}</span>
+        <h3 class="page-title pt-4">
+            <i class="ss ss-{{set.keyruneCode}} ss-2x mr-2 align-middle"></i>
+            <span class="align-middle">{{set.name}}</span>
             {{>tags item=set}}
         </h3>
         <ul class="mt-4 space-y-2">
