--- a/src/http/public/css/tailwind.css
+++ b/src/http/public/css/tailwind.css
@@ -2714,6 +2714,10 @@ input:where([type='file']):focus {
     text-align: center;
 }
 
+.align-middle {
+    vertical-align: middle;
+}
+
 .font-body {
     font-family:
         ui-sans-serif,
@@ -4217,11 +4221,18 @@ input:where([type='file']):focus {
     margin-left: auto;
     margin-right: auto;
     max-width: 80rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
 }
 
 @media (min-width: 640px) {
+    .content-wrapper {
+        padding-left: 1rem;
+        padding-right: 1rem;
+    }
+}
+
+@media (min-width: 768px) {
     .content-wrapper {
         padding-left: 1.5rem;
         padding-right: 1.5rem;
@@ -4362,10 +4373,10 @@ input:where([type='file']):focus {
     border-bottom-width: 2px;
     --tw-border-opacity: 1;
     border-color: rgb(69 221 214 / var(--tw-border-opacity, 1));
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
+    padding-left: 0.375rem;
+    padding-right: 0.375rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
     font-size: 0.75rem;
     line-height: 1rem;
     font-weight: 600;
@@ -4380,6 +4391,15 @@ input:where([type='file']):focus {
     border-color: rgb(44 200 202 / var(--tw-border-opacity, 1));
     --tw-text-opacity: 1;
     color: rgb(209 213 219 / var(--tw-text-opacity, 1));
+}
+
+@media (min-width: 640px) {
+    .table-header {
+        padding-left: 0.75rem;
+        padding-right: 0.75rem;
+        padding-top: 0.75rem;
+        padding-bottom: 0.75rem;
+    }
 }
 
 .table-header-row {
@@ -4460,7 +4480,7 @@ input:where([type='file']):focus {
 }
 
 .table-wrapper {
-    overflow: hidden;
+    overflow-x: auto;
     border-radius: 0.5rem;
     border-width: 1px;
     --tw-border-opacity: 1;
@@ -4477,10 +4497,19 @@ input:where([type='file']):focus {
 }
 
 .table-cell {
-    padding-left: 0.75rem;
-    padding-right: 0.75rem;
-    padding-top: 0.75rem;
-    padding-bottom: 0.75rem;
+    padding-left: 0.375rem;
+    padding-right: 0.375rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+}
+
+@media (min-width: 640px) {
+    .table-cell {
+        padding-left: 0.75rem;
+        padding-right: 0.75rem;
+        padding-top: 0.75rem;
+        padding-bottom: 0.75rem;
+    }
 }
 
 /* ===== Tags ===== */
