--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -2,7 +2,7 @@
 <div id="set-header-container" class="relative">
     <section class="text-center bg-teal-50 dark:bg-midnight-900 mb-4 pb-4 rounded-b-lg">
         <h3 class="page-title pt-4">
-            <i class="ss ss-{{set.keyruneCode}} ss-2x mr-2 align-middle"></i>
+            <i class="ss ss-{{set.keyruneCode}} ss-2x ss-foil mr-2 align-middle"></i>
             <span class="align-middle">{{set.name}}</span>
             {{>tags item=set}}
         </h3>
